--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
       "typeorm": "0.3.9"
    },
    "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
       "@types/express": "^4.17.13",
       "@types/morgan": "^1.9.3",
       "@types/node": "^16.11.10",
